// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;
using TodoApp.Api.Data;

#nullable disable

namespace TodoApp.Api.Data.Migrations
{
    [DbContext(typeof(AppDbContext))]
    [Migration("20260410021420_AddPriorityFeature")]
    partial class AddPriorityFeature
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "9.0.14")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("TodoApp.Api.Models.Priority", b =>
                {
                    b.Property<string>("Id")
                        .HasColumnType("char(3)")
                        .HasColumnName("id");

                    b.Property<string>("BackgroundColor")
                        .IsRequired()
                        .HasMaxLength(7)
                        .HasColumnType("character varying(7)")
                        .HasColumnName("background_color");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<int>("DisplayOrder")
                        .HasColumnType("integer")
                        .HasColumnName("display_order");

                    b.Property<string>("ForegroundColor")
                        .IsRequired()
                        .HasMaxLength(7)
                        .HasColumnType("character varying(7)")
                        .HasColumnName("foreground_color");

                    b.Property<bool>("IsDeleted")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("boolean")
                        .HasDefaultValue(false)
                        .HasColumnName("is_deleted");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)")
                        .HasColumnName("name");

                    b.HasKey("Id");

                    b.ToTable("priorities", (string)null);

                    b.HasData(
                        new
                        {
                            Id = "001",
                            BackgroundColor = "#FEE2E2",
                            CreatedAt = new DateTime(2026, 4, 10, 0, 0, 0, 0, DateTimeKind.Utc),
                            DisplayOrder = 1,
                            ForegroundColor = "#EF4444",
                            IsDeleted = false,
                            Name = "高"
                        },
                        new
                        {
                            Id = "002",
                            BackgroundColor = "#FFEDD5",
                            CreatedAt = new DateTime(2026, 4, 10, 0, 0, 0, 0, DateTimeKind.Utc),
                            DisplayOrder = 2,
                            ForegroundColor = "#F97316",
                            IsDeleted = false,
                            Name = "中"
                        },
                        new
                        {
                            Id = "003",
                            BackgroundColor = "#DBEAFE",
                            CreatedAt = new DateTime(2026, 4, 10, 0, 0, 0, 0, DateTimeKind.Utc),
                            DisplayOrder = 3,
                            ForegroundColor = "#3B82F6",
                            IsDeleted = false,
                            Name = "低"
                        });
                });

            modelBuilder.Entity("TodoApp.Api.Models.Todo", b =>
                {
                    b.Property<int>("Id")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer")
                        .HasColumnName("id");

                    NpgsqlPropertyBuilderExtensions.UseIdentityByDefaultColumn(b.Property<int>("Id"));

                    b.Property<bool>("Completed")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("boolean")
                        .HasDefaultValue(false)
                        .HasColumnName("completed");

                    b.Property<DateTime>("CreatedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at");

                    b.Property<DateOnly?>("DueDate")
                        .HasColumnType("date")
                        .HasColumnName("due_date");

                    b.Property<string>("PriorityId")
                        .HasColumnType("char(3)")
                        .HasColumnName("priority_id");

                    b.Property<string>("Text")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("character varying(200)")
                        .HasColumnName("text");

                    b.HasKey("Id");

                    b.HasIndex("PriorityId");

                    b.ToTable("todos", (string)null);
                });

            modelBuilder.Entity("TodoApp.Api.Models.Todo", b =>
                {
                    b.HasOne("TodoApp.Api.Models.Priority", "Priority")
                        .WithMany("Todos")
                        .HasForeignKey("PriorityId")
                        .OnDelete(DeleteBehavior.SetNull)
                        .HasConstraintName("FK_todos_priorities_priority_id");

                    b.Navigation("Priority");
                });

            modelBuilder.Entity("TodoApp.Api.Models.Priority", b =>
                {
                    b.Navigation("Todos");
                });
#pragma warning restore 612, 618
        }
    }
}
