/**
 * カテゴリ
 */
export interface Category {
  /** ユニークID */
  id: string
  /** カテゴリ名 */
  name: string
}
